force-app/main/default/objects/Parts_Inventory__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Engine Parts</fullName>
            </value>
            <value>
                <fullName>- Brake Parts</fullName>
            </value>
            <value>
                <fullName>- Electrical</fullName>
            </value>
            <value>
                <fullName>- Filters</fullName>
            </value>
            <value>
                <fullName>- Fluids</fullName>
            </value>
            <value>
                <fullName>- Belts &amp; Hoses</fullName>
            </value>
            <value>
                <fullName>- Tires</fullName>
            </value>
            <value>
                <fullName>- Body Parts</fullName>
            </value>
            <value>
                <fullName>- Tools</fullName>
            </value>
            <value>
                <fullName>- Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>