force-app/main/default/objects/Parts_Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Warehouse location</inlineHelpText>
    <label>Storage Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>