force-app/main/default/objects/Parts_Inventory__c/fields/Minimum_Stock__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Minimum Stock</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>