force-app/main/default/objects/Parts_Inventory__c/fields/MinStock_For_Filter_c__c.field-meta.xml
<CustomField>
    <fullName>MinStock_For_Filter_c__c</fullName>
    <defaultValue>5</defaultValue>
    <label>MinStock_For_Filter__c</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>