force-app/main/default/objects/Parts_Inventory__c/validationRules/Stock_Levels_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Levels_Logic</fullName>
    <active>true</active>
    <description>Current stock cannot be negative and minimum stock must be positive</description>
    <errorConditionFormula>OR(
  Current_Stock__c &lt; 0,
  Minimum_Stock__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Current stock cannot be negative and minimum stock must be greater than zero</errorMessage>
</ValidationRule>