force-app/main/default/objects/Parts_Inventory__c/validationRules/Unit_Cost_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Cost_Positive</fullName>
    <active>true</active>
    <description>Unit cost must be positive</description>
    <errorConditionFormula>Unit_Cost__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Unit_Cost__c</errorDisplayField>
    <errorMessage>Unit cost must be greater than zero</errorMessage>
</ValidationRule>